<resources>
    <string name="app_name">chkBox</string>

    <string name="registration">Registration</string>
    <string name="Please_enter_your_name">Please enter your name</string>
    <string name="Please_enter_password">Enter password</string>
    <string name="submit">submit</string>
    <string name="enter_address">Please enter address</string>
    <string name="Please_enter_conform_password">conform password</string>
    <string name="music">Music</string>
    <string name="dancing">Dancing</string>
    <string name="reading">Reading</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Other">Other</string>
</resources>
